# agentface

./: README.md  pyproject.toml
agentface/: __init__.py  __main__.py  emitter.py  expression_net.py  idle.py  marker.py  merger.py  pipeline.py  sentiment.py
owl/: components.md  constraints.md  product.md
tests/: test_marker.py  test_merger.py  test_pipeline.py  test_sentiment.py
