[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentface"
version = "0.1.0"
description = "LLM token stream → facial mocap points via sentiment analysis and hidden markers"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["agentface*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
